package edu.austral.ingsis.math.arguments

interface IArgument {
    fun getValue(args: String?): Double
}
