package edu.austral.ingsis.math.functions

interface IFunction {
    fun evaluate(args: String? = null): Number
}
